--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jasper-connector",
   "version": "1.0.0",
   "description": "Simple JasperReports Server connector",
-  "main": "jasper-connector.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
